--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "konva": "^9.3.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-konva": "^19.0.1",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
