--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@types/webfontloader": "^1.6.38",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -33,7 +34,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-image": "^1.1.1",
     "uuid": "^11.0.5",
-    "valtio": "^2.1.3"
+    "valtio": "^2.1.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
