--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,16 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@types/three": "^0.173.0",
     "@types/webfontloader": "^1.6.38",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "konva": "^9.3.18",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.1",
@@ -32,6 +36,7 @@
     "react-router": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "use-image": "^1.1.1",
     "uuid": "^11.0.5",
     "valtio": "^2.1.3",
