--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,6 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@react-spring/konva": "^9.7.5",
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/three": "^0.173.0",
     "@types/webfontloader": "^1.6.38",
     "class-variance-authority": "^0.7.1",
@@ -33,7 +30,6 @@
     "cmdk": "^1.0.0",
     "konva": "^9.3.18",
     "lucide-react": "^0.474.0",
-    "motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.1",
@@ -59,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
