--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format:write": "prettier --write \"src/**/*.{js,ts,json,css,md}\""
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
@@ -25,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@types/three": "^0.173.0",
     "@types/webfontloader": "^1.6.38",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -35,12 +37,14 @@
     "react-konva": "^19.0.1",
     "react-konva-utils": "^1.0.7",
     "react-router": "^7.1.1",
+    "react-use-websocket-lite": "^1.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
     "use-image": "^1.1.1",
     "uuid": "^11.0.5",
     "valtio": "^2.1.3",
+    "valtio-history": "^1.0.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
